--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.8.2
 Markdown==2.6.2
+Pillow==2.9.0
 argparse==1.2.1
 django-filter==0.10.0
+django-rest-auth==0.5.0
 djangorestframework==3.1.3
+psycopg2==2.6.1
+six==1.9.0
 wsgiref==0.1.2
-psycopg2==2.5.1
-django-cors-headers==0.13
