--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -2,6 +2,7 @@ Django==1.8.2
 Markdown==2.6.2
 Pillow==2.9.0
 argparse==1.2.1
+django-cors-headers==1.1.0
 django-filter==0.10.0
 django-rest-auth==0.5.0
 djangorestframework==3.1.3
